--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,3 +8,9 @@
 
 /* Блоки */
 @import "blocks/container";
+@import "blocks/button";
+@import "blocks/link-arrow";
+@import "blocks/form-checkbox";
+@import "blocks/form-radio";
+@import "blocks/form";
+@import "blocks/paginator";
