--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,10 +7,11 @@ $dark-text: #354052;
 $white: #ffffff;
 $blue-default: #2c8ecc;
 $blue-accent: #116ca6;
-$light-blue: #9bd2f4;
+$light-blue: #eaf4fa;
+$light-blue-accent: #9bd2f4;
 $light-grey: #e3e8ee;
 $grey: #707b8c;
-$grey-default:#707b8c;
+$grey-default:#a6abb3;
 $red: #e55050;
 
 $retina2x-dpi: 144dpi;
