--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -13,6 +13,7 @@ $light-grey: #e3e8ee;
 $grey: #707b8c;
 $grey-default:#a6abb3;
 $red: #e55050;
+$color-bg: #f9f9fa;
 
 $retina2x-dpi: 144dpi;
 $retina2x-dppx: 1.5dppx;
