--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,4 +15,5 @@
 @import "blocks/form";
 @import "blocks/paginator";
 @import "blocks/button-star";
+@import "blocks/page-404";
 @import "blocks/page-footer";
