Добавляет стили шапки

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,9 @@
 @import "blocks/form";
 @import "blocks/paginator";
 @import "blocks/button-star";
+
+// header
+@import "blocks/page-header";
+@import "blocks/location-switcher";
+@import "blocks/user-menu";
+@import "blocks/menu-btn";
