--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -38,6 +38,7 @@
   display: block;
   width: 138px;
   margin-left: 49px;
+  margin-right: auto;
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
@@ -68,7 +69,6 @@
   display: flex;
   align-items: center;
   max-width: 240px;
-  margin-left: auto;
   font-size: 16px;
   line-height: 19px;
   text-decoration: none;
@@ -104,10 +104,27 @@
 
 
 @include tablet {
+  .page-header {
+    &--open-menu {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   .page-header__container {
+    padding: 0 24px;
+
     &--main {
       display: block;
+      height: 100%;
       padding: 0;
+      overflow-y: scroll;
+
+      // iOS fix
+      -webkit-overflow-scrolling: touch;
     }
   }
 
@@ -128,8 +145,21 @@
 
   .page-header__cite-name {
     width: 130px;
+    margin-right: 26px;
     font-size: 15px;
     line-height: 18px;
+
+    &:hover {
+      color: inherit;
+    }
+
+    &:active {
+      color: $blue-accent;
+    }
+  }
+
+  .page-header__visually-impaired {
+    margin-right: auto;
 
     &:hover {
       color: inherit;
@@ -143,11 +173,28 @@
   .page-header__main {
     padding: 0;
     background-color: $white;
+    overflow-y: hidden;
+
+    &--js {
+      display: none;
+    }
+  }
+
+  .page-header--open-menu .page-header__main {
+    display: block;
   }
 }
 
 
 @include mobile {
+  .page-header__container {
+    padding: 0 16px;
+
+    &--main {
+      padding: 0;
+    }
+  }
+
   .page-header__roi-logo {
     width: 124px;
     height: 40px;
@@ -156,6 +203,7 @@
   .page-header__cite-name {
     width: 90px;
     margin-left: 25px;
+    margin-right: auto;
     font-size: 10px;
     line-height: 12px;
 
