--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -7,6 +7,7 @@
 @import "plugins/normalize";
 
 /* Блоки */
+@import "blocks/page-body";
 @import "blocks/container";
 @import "blocks/button";
 @import "blocks/link-arrow";
