--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -13,6 +13,10 @@
   box-shadow: 0 4px 10px rgba(46, 67, 102, 0.1);
 }
 
+.page-header--above-content .page-header__bar {
+  display: none;
+}
+
 .page-header__container {
   display: flex;
   align-items: center;
@@ -85,6 +89,11 @@
   }
 }
 
+.page-header--above-content .page-header__visually-impaired--main {
+  display: flex;
+  margin-right: 42px;
+}
+
 .page-header__visually-impaired svg {
   display: block;
   width: 18px;
@@ -126,6 +135,10 @@
       // iOS fix
       -webkit-overflow-scrolling: touch;
     }
+  }
+
+  .page-header--above-content .page-header__bar {
+    display: block;
   }
 
   .page-header__roi-link {
@@ -191,6 +204,9 @@
     padding: 0 16px;
 
     &--main {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
       padding: 0;
     }
   }
@@ -220,6 +236,7 @@
     }
 
     &--main {
+      order: -1;
       display: flex;
       max-width: none;
       padding: 23px 16px 27px;
