--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,4 +1,5 @@
 .page-footer {
+  margin-top: auto;
   padding-top: 40px;
   background-color: $color-bg;
   background-image: linear-gradient($light-grey, $light-grey);
@@ -51,6 +52,7 @@
   }
 
   & a {
+    align-self: flex-start;
     color: $blue-default;
     text-decoration: none;
     transition: all 0.4s ease;
@@ -71,7 +73,7 @@
 
   & span {
     color: $grey-default;
-    font-size: 15px;
-    line-height: 27px;
+    font-size: rem(15px);
+    line-height: rem(27px);
   }
 }
