--- a/source/sass/blocks/paginator.scss
+++ b/source/sass/blocks/paginator.scss
@@ -1,10 +1,20 @@
 .paginator {
   display: flex;
   flex-wrap: wrap;
+  width: 545px;
+  margin: 0 auto;
 
-  font-size: 15px;
-  line-height: 27px;
+  font-size: rem(15px);
+  line-height: rem(27px);
   color: $dark-text;
+
+  @media (max-width: 617px) {
+    width: 312px;
+  }
+
+  @media (max-width: 400px) {
+    width: 288px;
+  }
 }
 
 .paginator__item {
@@ -18,6 +28,10 @@
   border: 1px solid $light-grey;
   border-radius: 5px;
   transition: all 0.4s ease;
+
+  &:last-child {
+    margin-right: 0;
+  }
 
   &[href]:hover,
   &[href]:focus,
@@ -33,13 +47,27 @@
 
   &--prev {
     margin-right: 23px;
+
+    @media (max-width: 617px) {
+      margin-right: 11px;
+    }
   }
 
   &--next {
     margin-left: 15px;
+
+    @media (max-width: 617px) {
+      margin-left: 3px;
+    }
   }
 
   &--disabled {
     color: $grey-default;
+  }
+
+  &--hidden {
+    @media (max-width: 617px) {
+      display: none;
+    }
   }
 }
