--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -21,7 +21,8 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url("../fonts/Rubik-Regular-cyrillic.woff2") format("woff2");
+  src: url("../fonts/Rubik-Regular-cyrillic.woff2") format("woff2"),
+    url("../fonts/Rubik-Regular.woff") format("woff");
 }
 
 @font-face {
