--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,5 +1,5 @@
 html {
-  font-size: 1rem;
+  font-size: ($base-font-size / 16px) * 100%;
   box-sizing: border-box;
 }
 
@@ -10,17 +10,21 @@ html {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: "Rubik", "Arial", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 15px;
-  line-height: 20px;
+  font-size: rem(15px);
+  line-height: rem(20px);
   color: dark-text;
   background-color: white;
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
