--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -16,56 +16,56 @@
 
 @mixin font-h1 {
   @include font;
-  font-size: 40px;
-  line-height: 47px;
+  font-size: rem(40px);
+  line-height: rem(47px);
   font-weight: 400;
   color: $dark-main;
 }
 
 @mixin font-h2 {
   @include font;
-  font-size: 30px;
-  line-height: 36px;
+  font-size: rem(30px);
+  line-height: rem(36px);
   font-weight: 400;
   color: $dark-main;
 }
 
 @mixin font-h3 {
   @include font;
-  font-size: 24px;
-  line-height: 28px;
+  font-size: rem(24px);
+  line-height: rem(28px);
   font-weight: 400;
   color: $dark-main;
 }
 
 @mixin font-h4 {
   @include font;
-  font-size: 18px;
-  line-height: 23px;
+  font-size: rem(18px);
+  line-height: rem(23px);
   font-weight: 400;
   color: $dark-main;
 }
 
 @mixin font-h5 {
   @include font;
-  font-size: 16px;
-  line-height: 22px;
+  font-size: rem(16px);
+  line-height: rem(22px);
   font-weight: 400;
   color: $dark-main;
 }
 
 @mixin main-text {
   @include font;
-  font-size: 15px;
-  line-height: 20px;
+  font-size: rem(15px);
+  line-height: rem(20px);
   font-weight: 400;
   color: $dark-main;
 }
 
 @mixin caption-text {
   @include font;
-  font-size: 13px;
-  line-height: 17px;
+  font-size: rem(13px);
+  line-height: rem(17px);
   font-weight: 400;
   color: $dark-main;
 }
