--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,4 @@
+@import "functions";
 @import "variables";
 @import "mixins";
 @import "fonts";
@@ -5,6 +6,8 @@
 
 /* Плагины */
 @import "plugins/normalize";
+@import "plugins/jquery.formstyler";
+@import "plugins/perfect-scrollbar";
 
 /* Блоки */
 @import "blocks/container";
@@ -12,6 +15,7 @@
 @import "blocks/link-arrow";
 @import "blocks/form-checkbox";
 @import "blocks/form-radio";
+@import "blocks/form-select";
 @import "blocks/form";
 @import "blocks/paginator";
 @import "blocks/button-star";
