add begin of main page

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,3 +15,5 @@
 @import "blocks/form";
 @import "blocks/paginator";
 @import "blocks/button-star";
+@import "blocks/title";
+@import "blocks/news-notice";
