--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,6 +1,8 @@
-$desktop-width: 1200px;
+$desktop-width: 1120px;
 $tablet-width: 768px;
 $mobile-width: 320px;
+
+$desktop-main-margin: 123px;
 
 $dark-main: #333333;
 $dark-text: #354052;
