--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -16,8 +16,8 @@ body {
   font-family: "Rubik", "Arial", sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 15px;
-  line-height: 20px;
+  font-size: rem(15px);
+  line-height: rem(20px);
   color: dark-text;
   background-color: white;
   -webkit-font-smoothing: antialiased;
