--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,7 @@
 /* Блоки */
 @import "blocks/page-body";
 @import "blocks/container";
+@import "blocks/logo-link";
 @import "blocks/button";
 @import "blocks/link-arrow";
 @import "blocks/form-checkbox";
@@ -21,6 +22,7 @@
 
 // header
 @import "blocks/page-header";
+@import "blocks/menu-btn";
+@import "blocks/main-menu";
 @import "blocks/location-switcher";
 @import "blocks/user-menu";
-@import "blocks/menu-btn";
