--- a/source/sass/blocks/menu-btn.scss
+++ b/source/sass/blocks/menu-btn.scss
@@ -1,3 +1,12 @@
+@mixin line {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: currentColor;
+  border-radius: $border-radius;
+}
+
+
 .menu-btn {
   display: none;
 }
@@ -24,13 +33,11 @@
 
     &::before,
     &::after {
+      @include line;
+
       content: "";
       position: absolute;
       right: 0;
-      width: 100%;
-      height: 3px;
-      background-color: currentColor;
-      border-radius: 5px;
     }
 
     &::before {
@@ -59,11 +66,7 @@
   }
 
   .menu-btn__icon {
-    display: block;
-    width: 100%;
-    height: 3px;
-    background-color: currentColor;
-    border-radius: 5px;
+    @include line;
   }
 
   .menu-btn--close .menu-btn__icon {
