--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,20 +1,13 @@
 .page-header {
   position: sticky;
+  z-index: 100;
   top: 0;
   width: 100%;
+  // WARNING: сделать в относительных единицах
+  font-size: 16px;
+  line-height: 19px;
   color: $dark-text;
-}
-
-.page-header__bar {
-  position: relative;
-  z-index: 1;
-  padding: 12px 0;
   background-color: $white;
-  box-shadow: 0 4px 10px rgba(46, 67, 102, 0.1);
-}
-
-.page-header--above-content .page-header__bar {
-  display: none;
 }
 
 .page-header__container {
@@ -22,13 +15,22 @@
   align-items: center;
 }
 
-.page-header__roi-link {
-  display: block;
+.page-header__link {
+  text-decoration: none;
   user-select: none;
+  color: inherit;
+  transition: color $style-change-duration;
 
-  &:hover {
-    opacity: 0.6;
+  &[href]:hover {
+    color: $blue-accent;
   }
+}
+
+.page-header__bar {
+  position: relative;
+  z-index: 1;
+  padding: 12px 0 13px;
+  box-shadow: 0 4px 10px rgba(46, 67, 102, 0.1);
 }
 
 .page-header__roi-logo {
@@ -37,24 +39,14 @@
   height: 56px;
 }
 
-.page-header__cite-name {
+.page-header__site-name {
   position: relative;
   display: block;
   width: 138px;
   margin-left: 49px;
   margin-right: auto;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 19px;
   text-transform: uppercase;
-  text-decoration: none;
-  user-select: none;
-  color: inherit;
-  transition: color $style-change-duration;
-
-  &:hover {
-    color: $blue-accent;
-  }
 
   &::after {
     content: "";
@@ -69,46 +61,41 @@
   }
 }
 
-.page-header__visually-impaired {
+.page-header__version-btn {
   display: flex;
   align-items: center;
   max-width: 240px;
-  font-size: 16px;
-  line-height: 19px;
-  text-decoration: none;
-  user-select: none;
-  color: inherit;
-  transition: color $style-change-duration;
 
-  &--main {
+  &--menu {
     display: none;
   }
-
-  &:hover {
-    color: $blue-accent;
-  }
 }
 
-.page-header--above-content .page-header__visually-impaired--main {
-  display: flex;
-  margin-right: 42px;
-}
-
-.page-header__visually-impaired svg {
+.page-header__version-btn svg {
   display: block;
   width: 18px;
   height: 18px;
-  margin-right: 10px;
+  margin-right: 11px;
   fill: #c4c4c4;
-}
-
-.page-header__main {
-  padding: 23px 0;
-  background-color: #f9f9fa;
 }
 
 .page-header__location-switcher {
   margin-right: auto;
+}
+
+
+@include desktop-only {
+  .page-header--above-content {
+    .page-header__bar,
+    .page-header__location-address {
+      display: none;
+    }
+
+    .page-header__version-btn--menu {
+      display: flex;
+      margin-right: 38px;
+    }
+  }
 }
 
 
@@ -126,28 +113,20 @@
   .page-header__container {
     padding: 0 24px;
 
-    &--main {
-      display: block;
-      height: 100%;
+    &--menu {
+      flex-direction: column;
+      align-items: flex-start;
       padding: 0;
-      overflow-y: scroll;
-
-      // iOS fix
-      -webkit-overflow-scrolling: touch;
     }
   }
 
-  .page-header--above-content .page-header__bar {
-    display: block;
-  }
-
-  .page-header__roi-link {
-    &:hover {
-      opacity: 1;
+  .page-header__link {
+    &[href]:hover {
+      color: inherit;
     }
 
-    &:active {
-      opacity: 0.6;
+    &[href]:active {
+      color: $blue-accent;
     }
   }
 
@@ -156,45 +135,22 @@
     height: 55px;
   }
 
-  .page-header__cite-name {
+  .page-header__site-name {
     width: 130px;
-    margin-right: 26px;
+    margin-right: 24px;
+    // WARNING: сделать в относительных единицах
     font-size: 15px;
-    line-height: 18px;
-
-    &:hover {
-      color: inherit;
-    }
-
-    &:active {
-      color: $blue-accent;
-    }
+    line-height: 17px;
   }
 
-  .page-header__visually-impaired {
+  .page-header__location-switcher,
+  .page-header__user-menu,
+  .page-header__version-btn {
+    width: 100%;
+  }
+
+  .page-header__version-btn {
     margin-right: auto;
-
-    &:hover {
-      color: inherit;
-    }
-
-    &:active {
-      color: $blue-accent;
-    }
-  }
-
-  .page-header__main {
-    padding: 0;
-    background-color: $white;
-    overflow-y: hidden;
-
-    &--js {
-      display: none;
-    }
-  }
-
-  .page-header--open-menu .page-header__main {
-    display: block;
   }
 }
 
@@ -203,10 +159,7 @@
   .page-header__container {
     padding: 0 16px;
 
-    &--main {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
+    &--menu {
       padding: 0;
     }
   }
@@ -216,10 +169,11 @@
     height: 40px;
   }
 
-  .page-header__cite-name {
+  .page-header__site-name {
     width: 90px;
     margin-left: 25px;
     margin-right: auto;
+    // WARNING: сделать в относительных единицах
     font-size: 10px;
     line-height: 12px;
 
@@ -230,16 +184,16 @@
     }
   }
 
-  .page-header__visually-impaired {
+  .page-header__version-btn {
     &--bar {
       display: none;
     }
 
-    &--main {
+    &--menu {
       order: -1;
       display: flex;
       max-width: none;
-      padding: 23px 16px 27px;
+      padding: 27px 16px 24px;
       margin-left: 0;
     }
   }
