--- a/source/sass/blocks/user-menu.scss
+++ b/source/sass/blocks/user-menu.scss
@@ -18,12 +18,12 @@
   }
 }
 
-.user-menu__dropdown-toggle {
+.user-menu__dropdown-btn {
   display: flex;
   align-items: center;
   max-width: 200px;
-  padding: 12px 0;
-  user-select: none;
+  padding: 0;
+  font: inherit;
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -37,17 +37,16 @@
 .user-menu__user-icon {
   flex-shrink: 0;
   display: block;
-  width: 12px;
+  width: 16px;
   height: 16px;
-  margin-right: 10px;
+  margin-right: 8px;
   fill: $blue-default;
   pointer-events: none;
 }
 
 .user-menu__user-name {
-  margin-right: 10px;
-  font-size: 16px;
-  line-height: 20px;
+  margin-right: 12px;
+  text-align: left;
   pointer-events: none;
 }
 
@@ -69,13 +68,13 @@
   @include list-reset;
 
   position: absolute;
-  top: 100%;
+  top: calc(100% + 9px);
   right: 0;
   box-sizing: border-box;
   width: 300px;
   padding-left: 32px;
   background-color: $white;
-  border-radius: 4px;
+  border-radius: $border-radius;
   box-shadow: 0 2px 10px rgba(46, 67, 102, 0.1);
 }
 
@@ -95,32 +94,23 @@
 
 .user-menu__link {
   display: block;
-  padding: 24px 32px 24px 0;
-  font-size: 16px;
-  line-height: 20px;
-  text-decoration: none;
-  user-select: none;
-  color: inherit;
-  transition: color $style-change-duration;
-
-  &:hover {
-    color: $blue-accent;
-  }
+  padding: 23px 32px 22px 0;
 }
 
 
 @include tablet {
   .user-menu {
-    padding: 24px 24px 0;
+    padding: 26px 24px 0;
   }
 
   .user-menu__overlay {
     display: none;
   }
 
-  .user-menu__dropdown-toggle {
+  .user-menu__dropdown-btn {
     max-width: none;
     padding: 0;
+    margin-bottom: 10px;
 
     &:hover {
       color: inherit;
@@ -134,7 +124,7 @@
   .user-menu__user-icon {
     width: 18px;
     height: 18px;
-    margin-right: 12px;
+    margin-right: 14px;
   }
 
   .user-menu__user-name {
@@ -164,21 +154,13 @@
   }
 
   .user-menu__link {
-    padding: 24px 0 24px;
-
-    &:hover {
-      color: inherit;
-    }
-
-    &:active {
-      color: $blue-accent;
-    }
+    padding-right: 0;
   }
 }
 
 
 @include mobile {
   .user-menu {
-    padding: 24px 16px 0;
+    padding: 21px 16px 0;
   }
 }
