--- a/source/sass/blocks/logo-link.scss
+++ b/source/sass/blocks/logo-link.scss
@@ -1,20 +1,25 @@
 .logo-link {
   display: inline-block;
   user-select: none;
+  outline: none;
 
-  &:hover {
+  &:focus {
+    opacity: 0.6;
+  }
+
+  &:focus:not(.focus-visible) {
+    opacity: 1;
+  }
+
+  &:active:not(.focus-visible) {
     opacity: 0.6;
   }
 }
 
 
-@include tablet {
+@media (min-width: $desktop-width) {
   .logo-link {
-    &:hover {
-      opacity: 1;
-    }
-
-    &:active {
+    &:hover:not(.focus-visible) {
       opacity: 0.6;
     }
   }
