--- a/source/sass/blocks/menu-btn.scss
+++ b/source/sass/blocks/menu-btn.scss
@@ -25,9 +25,18 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
+    outline: none;
     transition: color $style-change-duration;
 
-    &:active {
+    &:focus {
+      color: $blue-accent;
+    }
+
+    &:focus:not(.focus-visible) {
+      color: $blue-default;
+    }
+
+    &:active:not(.focus-visible) {
       color: $blue-accent;
     }
 
