Добавляет вариант селекта

--- a/source/sass/blocks/form-select.scss
+++ b/source/sass/blocks/form-select.scss
@@ -1,115 +1,112 @@
 .form-select {
-  & .jq-selectbox {
-    vertical-align: middle;
-    cursor: pointer;
-    box-sizing: border-box;
+  position: relative;
+  display: inline;
+
+  & .select-dropcontainer {
+    position: absolute;
+    top: 30px;
+    right: 0;
+
+    @include main-text;
+    color: $dark-text;
   }
 
-  & .jq-selectbox__select {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+  & .select-trigger {
+    position: relative;
+    padding-right: 20px;
 
-    @media (max-width: $tablet-width - 1) {
-      max-width: 288px;
+    @include font-h2;
+    color: $blue-default;
+    text-decoration: none;
+    border: none;
+    transition: all 0.4s ease;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 12px;
+      right: -10px;
+      width: 20px;
+      height: 12px;
+      background-image: url("../img/select-arrow.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    &:hover {
+      color: $blue-accent;
     }
   }
 
-  & .jq-selectbox__select-text {
+  & .select-activetrigger {
+    position: relative;
+    padding-right: 20px;
+
     @include font-h2;
     color: $blue-default;
+    text-decoration: none;
+    border: none;
 
     background-image: linear-gradient(to right, $light-blue-accent 0%, $light-blue-accent 50%, transparent 50%, transparent 75%);
     background-position: center bottom;
     background-repeat: repeat-x;
     background-size: 8px 2px;
 
-    transition: all 0.4s ease;
+    &::after {
+      content: "";
+      position: absolute;
+      top: 12px;
+      right: -10px;
+      width: 20px;
+      height: 12px;
+      background-image: url("../img/select-arrow.svg");
+      background-repeat: no-repeat;
+      background-position: center;
+    }
 
-    &:hover,
-    &:focus {
+    &:hover {
       color: $blue-accent;
     }
   }
 
-  & .jq-selectbox__trigger {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 20px;
-    height: 100%;
-    border-left: 0;
-    margin-left: 9px;
-  }
+  & .select-dropcontainer ul {
+    @include list-reset;
 
-  & .jq-selectbox__trigger-arrow {
-    width: 20px;
-    height: 12px;
-    background-image: url("../img/select-arrow.svg");
-    background-repeat: no-repeat;
-    background-size: auto;
-    transition: all 0.5s;
-
-    &--rotate {
-      transform: rotate(180deg);
-    }
-  }
-
-  & .jq-selectbox__dropdown {
-    color: $dark-text;
-    right: 0;
-
-    min-width: 343px;
-    min-height: 336px;
-
-    @media (max-width: $tablet-width - 1) {
-      right: auto;
-      left: 0;
-    }
-
-    @media (max-width: 400px) {
-      min-width: 100%;
-      right: auto;
-      left: 0;
-    }
-  }
-
-  & .jq-selectbox__dropdown ul {
     width: 343px;
-    min-height: 336px;
-    position: relative;
-    padding-left: 0;
-    padding-top: 8px;
-    margin-top: 14px;
-    margin-bottom: 0;
-    overflow: hidden;
+
     background-color: $color-bg;
     box-shadow: 0 2px 4px rgba(0, 30, 75, 0.15);
     border-radius: 5px;
 
-    @media (max-width: 400px) {
-      width: 100%;
-    }
-  }
-
-  & .jq-selectbox li {
-    padding: 8px 24px;
-    white-space: normal;
     transition: all 0.4s ease;
-
-    &.selected,
-    &.sel {
-      color: $blue-accent;
-    }
-
-    &:hover {
-      color: $blue-default;
-      background-color: #f5f6f7;
-    }
   }
 
-  & .ps__thumb-y {
-    right: 8px;
+  & .select-dropcontainer ul li {
+    padding: 8px 24px;
+  }
+
+  & .select-dropcontainer ul a {
+    text-decoration: none;
+  }
+
+  & .select-dropcontainer ul li:hover {
+    color: $blue-accent;
+    background-color: #f5f6f7;
+    outline: none;
+  }
+
+  & .select-dropdownhidden {
+    display: none;
+  }
+
+  & .select-dropdownvisible {
+    height: 336px;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: 6px;
+  }
+
+  & .select-dropdownvisible::-webkit-scrollbar {
+    width: 6px;
   }
 }
