--- a/source/sass/blocks/news-notice.scss
+++ b/source/sass/blocks/news-notice.scss
@@ -1,44 +1,106 @@
 .news-notice {
   display: flex;
   flex-direction: row;
-  max-width: $desktop-width + 2 * $desktop-main-margin;
-  padding: 72px $desktop-main-margin 0;
+  justify-content: space-between;
+  max-width: $max-width;
   margin: 0 auto;
+  padding: 72px 9% 0;
+  box-sizing: border-box;
 }
 
 .news-notice__news,
 .news-notice__notice {
-  width: 50%;
+  width: 47.2%;
 }
 
-.news-notice__news {
-  padding-right: 32px;
-}
+// .news-notice__news {
+//   padding-right: 32px;
+// }
 
-.news-notice__notice {
-  padding-left: 32px;
-}
+// .news-notice__notice {
+//   padding-left: 32px;
+// }
 
 .news-notice__title {
-  padding-left: 52px;
   position: relative;
+
+  padding-left: 52px;
 }
 
 .news-notice__title::before {
-  content: '';
+  content: "";
   position: absolute;
-  left: 0;
   top: 7px;
+  left: 0;
+
   width: 32px;
   height: 32px;
+
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 .news-notice__title--news::before {
-  background-image: url('../img/icon-news.svg');
+  background-image: url("../img/icon-news.svg");
 }
 
 .news-notice__title--notice::before {
-  background-image: url('../img/icon-notification.svg');
+  background-image: url("../img/icon-notification.svg");
+}
+
+.news-notice__list {
+  margin: 0;
+  padding: 0;
+  padding-top: 16px;
+
+  list-style: none;
+}
+
+.news-notice__item {
+  padding-top: 24px;
+
+  border-bottom: 1px solid $light-grey;
+}
+
+.news-notice__date {
+  position: relative;
+  width: fit-content;
+  margin: 0;
+  padding: 0;
+  padding-left: 24px;
+
+  font-size: rem(14px);
+  line-height: 1.3;
+  color: $grey-default;
+
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    background-image: url("../img/icon-time.svg");
+    background-repeat: no-repeat;
+  }
+
+  &--notice::after {
+    content: '';
+    position: absolute;
+    top: 2px;
+    right: -16px;
+    width: 12px;
+    height: 12px;
+    background-image: url("../img/icon-notification-small.svg");
+    background-repeat: no-repeat;
+  }
+}
+
+.news-notice__text {
+  margin: 0;
+  padding: 0;
+  padding-top: 16px;
+  padding-bottom: 32px;
+  font-size: rem(16px);
+  line-height: 1.35;
 }
