--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,7 +2,7 @@ $desktop-width: 1120px;
 $tablet-width: 768px;
 $mobile-width: 320px;
 
-$desktop-main-margin: 123px;
+$max-width: 1366px;
 
 $dark-main: #333333;
 $dark-text: #354052;
