--- a/source/components/footer.html
+++ b/source/components/footer.html
@@ -1,43 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="format-detection" content="telephone=no">
-
-  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-  <link rel="manifest" href="favicon/site.webmanifest">
-  <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
-
-  <link rel="preload" href="fonts/Rubik-Light.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Regular.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Medium.woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/Rubik-Bold.woff2" as="font" crossorigin="anonymous">
-  <link href="css/style.min.css" rel="stylesheet">
-  <title>Общественное голосование</title>
-</head>
-
-<body>
-  <header></header>
-  <main>
-    <section class="page-404">
-      <div class="container">
-        <div class="page-404__content">
-          <h1 class="visually-hidden">404</h1>
-          <img src="img/404.svg" width="400" height="165" alt="404">
-          <p>Страница не найдена </p>
-          <a href="main.html" class="button button--blue page-404__button">ВЕРНУТЬСЯ НА ГЛАВНУЮ</a>
-        </div>
-      </div>
-    </section>
-  </main>
-
-  <footer class="page-footer">
+<footer class="page-footer">
     <div class="container">
       <div class="page-footer__top">
         <ul class="page-footer__list">
@@ -77,7 +38,5 @@
 
 <script src="js/libs.js"></script>
 <script src="js/script.min.js"></script>
-
-
-
-</body></html>
+</body>
+</html>
