--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -18,7 +18,7 @@
 
   cursor: pointer;
 
-  transition: all 0.4s ease;
+  transition: color 0.4s ease, background-color 0.4s ease, border-color 0.4s ease;
 
   @media (max-width: 400px) {
     width: 100%;
