--- a/source/sass/blocks/form-select.scss
+++ b/source/sass/blocks/form-select.scss
@@ -1,112 +1,108 @@
 .form-select {
   position: relative;
   display: inline;
+}
 
-  & .select-dropcontainer {
+.form-select__title {
+  position: relative;
+
+  @include font-h2;
+  color: $blue-default;
+  text-decoration: none;
+
+  background-image: linear-gradient(to right, $light-blue-accent 0%, $light-blue-accent 50%, transparent 50%, transparent 75%);
+  background-position: center bottom;
+  background-repeat: repeat-x;
+  background-size: 8px 2px;
+
+  transition: all 0.4s ease;
+
+  &::after {
+    content: "";
     position: absolute;
-    top: 30px;
-    right: 0;
-
-    @include main-text;
-    color: $dark-text;
-  }
-
-  & .select-trigger {
-    position: relative;
-    padding-right: 20px;
-
-    @include font-h2;
-    color: $blue-default;
-    text-decoration: none;
-    border: none;
-    transition: all 0.4s ease;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 12px;
-      right: -10px;
-      width: 20px;
-      height: 12px;
-      background-image: url("../img/select-arrow.svg");
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-
-    &:hover {
-      color: $blue-accent;
-    }
-  }
-
-  & .select-activetrigger {
-    position: relative;
-    padding-right: 20px;
-
-    @include font-h2;
-    color: $blue-default;
-    text-decoration: none;
-    border: none;
-
-    background-image: linear-gradient(to right, $light-blue-accent 0%, $light-blue-accent 50%, transparent 50%, transparent 75%);
-    background-position: center bottom;
-    background-repeat: repeat-x;
-    background-size: 8px 2px;
-
-    &::after {
-      content: "";
-      position: absolute;
-      top: 12px;
-      right: -10px;
-      width: 20px;
-      height: 12px;
-      background-image: url("../img/select-arrow.svg");
-      background-repeat: no-repeat;
-      background-position: center;
-    }
-
-    &:hover {
-      color: $blue-accent;
-    }
-  }
-
-  & .select-dropcontainer ul {
-    @include list-reset;
-
-    width: 343px;
-
-    background-color: $color-bg;
-    box-shadow: 0 2px 4px rgba(0, 30, 75, 0.15);
-    border-radius: 5px;
-
+    top: 0;
+    right: -30px;
+    width: 20px;
+    height: 36px;
+    background-image: url("../img/select-arrow.svg");
+    background-repeat: no-repeat;
+    background-position: center;
     transition: all 0.4s ease;
   }
 
-  & .select-dropcontainer ul li {
-    padding: 8px 24px;
+  &:hover {
+    color: $blue-accent;
   }
 
-  & .select-dropcontainer ul a {
-    text-decoration: none;
+  &--open::after {
+    transform: rotate(180deg);
   }
+}
 
-  & .select-dropcontainer ul li:hover {
+.form-select__option {
+  margin: 0;
+  padding: 8px 24px;
+
+  @include main-text;
+  color: $dark-text;
+
+  cursor: pointer;
+
+  &:hover {
     color: $blue-accent;
     background-color: #f5f6f7;
-    outline: none;
   }
 
-  & .select-dropdownhidden {
-    display: none;
+  &--active {
+    color: $blue-default;
+  }
+}
+
+.form-select__group {
+  position: absolute;
+  top: 32px;
+  right: -30px;
+
+  display: none;
+  width: 343px;
+  height: 336px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+
+  background-color: $color-bg;
+  box-shadow: 0 2px 4px rgba(0, 30, 75, 0.15);
+  border-radius: 5px;
+
+  @media (max-width: $tablet-width - 1) {
+    right: auto;
+    left: 0;
+    width: 288px;
   }
 
-  & .select-dropdownvisible {
-    height: 336px;
-    overflow-y: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: 6px;
+  &--active {
+    display: block;
+  }
+}
+
+.form-select__scrollbar-content {
+  width: 343px;
+  height: 320px;
+
+  overflow-y: scroll;
+
+  @media (max-width: $tablet-width - 1) {
+    width: 288px;
   }
 
-  & .select-dropdownvisible::-webkit-scrollbar {
+  & .scrollbar-track {
+    background-color: transparent;
+    margin-right: 8px;
+  }
+
+  & .scrollbar-thumb {
     width: 6px;
+    min-height: 242px;
+    background-color: $light-grey;
+    border-radius: 5px;
   }
 }
