--- a/source/components/footer.html
+++ b/source/components/footer.html
@@ -37,6 +37,6 @@
   </footer>
 
 <script src="js/libs.js"></script>
-<script src="js/script.min.js"></script>
+<script src="js/main.min.js"></script>
 </body>
 </html>
