--- a/source/sass/blocks/news-notice.scss
+++ b/source/sass/blocks/news-notice.scss
@@ -1,30 +1,72 @@
 .news-notice {
+  box-sizing: border-box;
+  padding: 72px 9% 0;
+
+  text-align: center;
+
+  @media (max-width: $tablet-width - 1) {
+    padding: 62px 24px 0;
+  }
+
+  @media (max-width: $mobile-width) {
+    padding: 46px 16px 0;
+  }
+}
+
+.news-notice__wrap {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  max-width: $max-width;
-  margin: 0 auto;
-  padding: 72px 9% 0;
-  box-sizing: border-box;
+  padding-bottom: 48px;
+
+  @media (max-width: $tablet-width - 1) {
+    flex-direction: column;
+  }
+
+  @media (max-width: $mobile-width) {
+    padding-bottom: 30px;
+  }
 }
 
 .news-notice__news,
 .news-notice__notice {
   width: 47.2%;
+
+  text-align: left;
+
+  @media (max-width: $tablet-width - 1) {
+    width: 100%;
+  }
 }
 
-// .news-notice__news {
-//   padding-right: 32px;
-// }
+.news-notice__news {
+  @media (max-width: $tablet-width - 1) {
+    padding-bottom: 64px;
+  }
 
-// .news-notice__notice {
-//   padding-left: 32px;
-// }
+  @media (max-width: $mobile-width) {
+    padding-bottom: 48px;
+  }
+}
 
 .news-notice__title {
   position: relative;
 
+  margin: 0;
+  padding: 0;
   padding-left: 52px;
+
+  color: $dark-text;
+
+  @include font-h2();
+
+  @media (max-width: $mobile-width) {
+    @include font-h2();
+  }
+
+  @media (max-width: $mobile-width) {
+    padding-left: 46px;
+  }
 }
 
 .news-notice__title::before {
@@ -38,6 +80,13 @@
 
   background-repeat: no-repeat;
   background-size: contain;
+
+  @media (max-width: $mobile-width) {
+    top: 2px;
+
+    width: 32px;
+    height: 32px;
+  }
 }
 
 .news-notice__title--news::before {
@@ -54,16 +103,25 @@
   padding-top: 16px;
 
   list-style: none;
+
+  @media (max-width: $mobile-width) {
+    padding-top: 0;
+  }
 }
 
 .news-notice__item {
-  padding-top: 24px;
+  padding-top: 26px;
 
   border-bottom: 1px solid $light-grey;
+
+  @media (max-width: $mobile-width) {
+    padding-top: 24px;
+  }
 }
 
 .news-notice__date {
   position: relative;
+
   width: fit-content;
   margin: 0;
   padding: 0;
@@ -74,23 +132,27 @@
   color: $grey-default;
 
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
+
     width: 16px;
     height: 16px;
+
     background-image: url("../img/icon-time.svg");
     background-repeat: no-repeat;
   }
 
   &--notice::after {
-    content: '';
+    content: "";
     position: absolute;
-    top: 2px;
-    right: -16px;
+    top: 1px;
+    right: -29px;
+
     width: 12px;
     height: 12px;
+
     background-image: url("../img/icon-notification-small.svg");
     background-repeat: no-repeat;
   }
@@ -101,6 +163,11 @@
   padding: 0;
   padding-top: 16px;
   padding-bottom: 32px;
+
   font-size: rem(16px);
   line-height: 1.35;
+
+  @media (max-width: $mobile-width) {
+    padding-bottom: 27px;
+  }
 }
