--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -16,6 +16,7 @@ $grey: #707b8c;
 $grey-default:#a6abb3;
 $red: #e55050;
 $color-bg: #f9f9fa;
+$orange: #fca844;
 
 $retina2x-dpi: 144dpi;
 $retina2x-dppx: 1.5dppx;
