--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,7 @@
 
 /* Блоки */
 @import "blocks/page-body";
+@import "blocks/page-content";
 @import "blocks/container";
 @import "blocks/logo-link";
 @import "blocks/button";
@@ -19,6 +20,8 @@
 @import "blocks/form-radio";
 @import "blocks/form-select";
 @import "blocks/form";
+@import "blocks/filter";
+@import "blocks/counter";
 @import "blocks/paginator";
 @import "blocks/button-star";
 @import "blocks/page-404";
@@ -30,3 +33,7 @@
 @import "blocks/main-menu";
 @import "blocks/location-switcher";
 @import "blocks/user-menu";
+
+// projects
+@import "blocks/project-item";
+@import "blocks/projects";
