--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -3,11 +3,11 @@
   padding: 0 40px;
   margin: 0 auto;
 
-  @media (max-width: $tablet-width - 1) {
+  @include tablet {
     padding: 0 24px;
   }
 
-  @media (max-width: $mobile-max-width) {
+  @include mobile {
     padding: 0 16px;
   }
 }
