--- a/source/sass/blocks/projects.scss
+++ b/source/sass/blocks/projects.scss
@@ -2,6 +2,11 @@
   margin-bottom: 32px;
 }
 
+.projects__vote-end {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
 .projects__counter {
   border-bottom: none;
   border-bottom-left-radius: 0;
@@ -81,6 +86,18 @@
 @include mobile {
   .projects__filter {
     margin-bottom: 24px;
+  }
+
+  .projects__vote-end {
+    margin-bottom: 24px;
+    border-bottom-left-radius: $border-radius;
+    border-bottom-right-radius: $border-radius;
+  }
+
+  .counter--hidden + .projects__filter-main {
+    border-top: 1px solid $light-grey;
+    border-top-left-radius: $border-radius;
+    border-top-right-radius: $border-radius;
   }
 
   .projects__list {
