--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -42,5 +42,6 @@
 @import "blocks/user-menu";
 
 // projects
+@import "blocks/vote-end";
 @import "blocks/project-item";
 @import "blocks/projects";
