--- a/source/sass/blocks/composite-poll.scss
+++ b/source/sass/blocks/composite-poll.scss
@@ -35,20 +35,26 @@
     padding: 24px;
     margin-bottom: 10px;
   }
+
+  &--process {
+    margin-bottom: 120px;
+  }
 }
 
-.form__question {
-  margin: 0;
-  margin-bottom: 12px;
-
-  @include font-h5;
-  color: $dark-text;
+.composite-poll__process {
+  margin-bottom: 26px;
 }
 
-.form__description {
-  margin: 0;
-  margin-bottom: 24px;
+.composite-poll__button-wrapper {
+  margin-top: 40px;
+  margin-bottom: 120px;
 
-  @include main-text;
-  color: $grey-default;
+  @media (max-width: $tablet-width - 1) {
+    margin-bottom: 88px;
+  }
+}
+
+.composite-poll__button {
+  font-size: 14px;
+  line-height: 19px;
 }
