--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -29,6 +29,8 @@
 @import "blocks/page-footer";
 @import "blocks/arrow-backward";
 @import "blocks/page-title";
+@import "blocks/poll-process";
+@import "blocks/poll-result";
 @import "blocks/composite-poll";
 
 // header
