--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,4 +1,4 @@
-$desktop-width: 1120px;
+$desktop-width: 1200px;
 $tablet-width: 768px;
 $mobile-max-width: 400px;
 $mobile-width: 320px;
@@ -18,6 +18,7 @@ $grey-default:#a6abb3;
 $red: #e55050;
 $color-bg: #f9f9fa;
 $orange: #fca844;
+$fill-color: rgba(155, 210, 244, 0.25);
 
 $retina2x-dpi: 144dpi;
 $retina2x-dppx: 1.5dppx;
