--- a/source/sass/blocks/projects.scss
+++ b/source/sass/blocks/projects.scss
@@ -31,7 +31,7 @@
   }
 }
 
-.projects__show-more-btn {
+.projects__list-btn {
   display: block;
   width: 360px;
   margin: 0 auto 40px;
@@ -109,7 +109,7 @@
     }
   }
 
-  .projects__show-more-btn {
+  .projects__list-btn {
     width: 100%;
     max-width: 360px;
     margin-bottom: 32px;
