--- a/source/sass/blocks/form-select.scss
+++ b/source/sass/blocks/form-select.scss
@@ -1,11 +1,14 @@
 .form-select {
   position: relative;
+  display: inline;
+}
+
+.form-select__title-wrapper {
   display: inline-block;
 }
 
 .form-select__title {
-  display: inline-flex;
-  align-items: center;
+  position: relative;
 
   @include font-h2;
   color: $blue-default;
@@ -15,14 +18,17 @@
 
   &::after {
     content: "";
-    display: block;
+    display: inline-block;
+    vertical-align: middle;
     width: 20px;
     height: 36px;
-    margin-left: 8px;
+
     background-image: url("../img/select-arrow.svg");
     background-repeat: no-repeat;
     background-position: center;
+
     pointer-events: none;
+
     transition: all 0.4s ease;
   }
 
@@ -40,6 +46,7 @@
   background-position: center bottom;
   background-repeat: repeat-x;
   background-size: 8px 2px;
+
   pointer-events: none;
 }
 
